fix blurry view on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ canvas {
   height: 768px;
 
   image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
 }
 
 #container {
